--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ scipy==1.9.3
 sentencepiece==0.1.97
 six==1.16.0
 smart-open==6.3.0
+sphinx==5.3.0
+sphinx_autodoc_typehints==1.21.8
 threadpoolctl==3.1.0
 tomli==2.0.1
 toolz==0.12.0
