--- a/.github/workflows/docs-sphinx.yml
+++ b/.github/workflows/docs-sphinx.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v4
