Corrige comando de troca de branch

--- a/.github/workflows/docs-doxygen.yml
+++ b/.github/workflows/docs-doxygen.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Commit
         run: |
-          git checkout docs
+          git switch -c docs
           git add docs_doxygen/
           git commit -m "Generate docs with Doxygen"
           git push origin docs -f
